Make sure frames are visible above the body text.

--- a/webodf/webodf.css
+++ b/webodf/webodf.css
@@ -72,6 +72,10 @@ office|text * draw|text-box {
     display: block;
     border: 1px solid #d3d3d3;
 }
+draw|frame {
+  /** make sure frames are above the main body. */
+  z-index: 1;
+}
 office|spreadsheet {
   display: block;
   border-collapse: collapse;
